# AdasToolLib

./: .gitignore  CMakeLists.txt  README.md
Documentation/Transformers/: README.md
apps/: README.md
apps/advanced_app/: CMakeLists.txt  README.md
apps/advanced_app/include/: helpers.hpp  transformers.hpp
apps/advanced_app/src/: main.cpp  transformers.cpp
apps/camera_projection/: CMakeLists.txt  README.md
apps/camera_projection/include/: helpers.hpp  transformers.hpp
apps/camera_projection/src/: main.cpp  transformers.cpp
apps/quaternion_app/: CMakeLists.txt  README.md
apps/quaternion_app/include/: helpers.hpp  quaternion.hpp
apps/quaternion_app/src/: main.cpp  quaternion.cpp
apps/quaternion_app/test/: test_quaternion.cpp
examples/: README.md  advanced_transform_examples.cpp  example_usage.cpp  main_app.cpp  quaternion_walk.cpp  sensor_chain.cpp  sensor_offsets.cpp  stb_image.h  stb_image_write.h  test_input.ppm  visualize_projection.cpp
include/: adasTools.hpp  helpers.hpp  quaternion.hpp  transformers.hpp
src/: main.cpp  quaternion.cpp  transformers.cpp
tests/: test_gimbal.cpp  test_slerp.cpp  test_slerp_edge.cpp  test_transformers.cpp
